[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/RequestForNickname.gd" type="Script" id=1]
[ext_resource path="res://assets/emberfont/emberfont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/button_notPressed.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 34
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 41
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 29
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="RequestForNickname" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.055
margin_top = -302.161
margin_right = 511.94
margin_bottom = 297.839
color = Color( 0, 0, 0, 0.478431 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 180.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = -103.0
custom_fonts/font = SubResource( 1 )
text = "It looks like it's your first time playing!
Please choose a nickname."
align = 1
valign = 1

[node name="Nickname" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = -92.0
margin_right = 199.0
margin_bottom = -87.0
align = 1
max_length = 50
placeholder_text = "Steve207"

[node name="UUID" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 55.294
margin_right = 200.0
margin_bottom = 79.294
align = 1
max_length = 24
placeholder_text = "XXXXXXXXXXXXXXXXXXXXXXXX"

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -30.0
margin_right = 298.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "Or enter your UUID if you have an existing
account"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 119.0
margin_right = 150.0
margin_bottom = 167.0
disabled = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="TextureButton"]
margin_right = 300.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
text = "Confirm"
align = 1
valign = 1

[node name="NicknameError" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.0
margin_top = -68.0
margin_right = 222.0
margin_bottom = -23.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "This nickname is already taken"
align = 1
valign = 1

[node name="UUIDError" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = 86.0
margin_right = 220.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "This UUID is invalid"
align = 1
valign = 1
[connection signal="text_changed" from="Nickname" to="." method="_on_Nickname_text_changed"]
[connection signal="text_changed" from="UUID" to="." method="_on_UUID_text_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
